# LfastMountPaddleControl

./: CMakeLists.txt  KincoDriver.cc  PaddleController.cc  PaddleController.h  TerminalInterface.cc  TerminalInterface.h  config.h  main.cc
Paddle_Firmware/: platformio.ini
Paddle_Firmware/include/: paddle_config.h
Paddle_Firmware/src/: main.cpp
